@@ -1,5 +1,14 @@
 2016-02-18  Ola Jeppsson  <ola@adapteva.com>
 
+	* e-hal/src/epiphany-hal.c (soft_reset_payload): Add missing
+	branch.
+	(ee_soft_reset_core): Improve robustness. Fail on detected
+	errors.
+	* e-hal/src/e-loader.c (e_load_group): Check return value from
+	ee_soft_reset_core().
+
+2016-02-18  Ola Jeppsson  <ola@adapteva.com>
+
 	* e-hal/src/e-loader.c (e_load_group): Replace call to
 	ee_reset_group() with call to ee_soft_reset_core().
 	* e-hal/src/epiphany-hal-api-local.h: Add ee_soft_reset_core
